@@ -1,5 +1,11 @@
 2009-07-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Don't append "/" if base URI ends with "/".
+	* src/bittorrent_helper.cc
+	* test/url-list-multiFile.torrent
+
+2009-07-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	HTTP pipelining is now working. Fixed Segmention fault in
 	BitfieldMan's copy ctor.	
 	* src/AbstractCommand.cc
